--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ pyaes==1.6.1
 Pyrogram==2.0.106
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 pytz==2024.1
 six==1.16.0
 TgCrypto==1.2.5
