--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     build: .
     environment:
       - DATABASE_URL=postgresql://postgres:password@db:5432/bot
+    volumes:
+      - ./sessions:/forwardpost/sessions
   db:
     image: postgres
     ports:
@@ -13,8 +15,8 @@ services:
       POSTGRES_DB: bot
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
-#    volumes:
-#      - postgres_data:/var/lib/postgresql/data  # Позволяет сохранять данные базы данных между запусками
-#    restart: always
-#volumes:
-#  postgres_data:
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: always
+volumes:
+  postgres_data:
